--- a/newtab.html
+++ b/newtab.html
@@ -19,6 +19,7 @@
 			     <p><span>Title:</span><input type="text" class="title" placeholder="Enter Title" /></p>
 			     <p><span>URL:</span><input type="text" class="url" placeholder="Enter URL" /></p>
 			     <p><span>Custom Icon:</span><input type="text" class="icon" placeholder="Enter URL of Custom Icon/Image" /></p>
+			     <p><span>Use Thumbnail:</span><input type="checkbox" class="thumbnail" title="Check to use the thumbnail service, uncheck to use the site's favicon." /></p>
 			     <button class="close-reveal-modal">Save</button>
 			     <a class="close close-reveal-modal">x</a>
 			</div>
