--- a/newtab.html
+++ b/newtab.html
@@ -1,38 +1,68 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Speed Dial</title>
+    <head>
+        <title>Speed Dial</title>
 
-		<link rel="stylesheet" type="text/css" href="css/newtab.css" />
-		<link rel="stylesheet" type="text/css" href="css/reveal.css" />
-		<link rel="stylesheet" type="text/css" id="foundicons" />
-		<style type="text/css" id="styles"></style>
-	</head>
+        <link rel="stylesheet" type="text/css" href="css/newtab.css" />
+        <link rel="stylesheet" type="text/css" href="css/reveal.css" />
+        <link rel="stylesheet" type="text/css" id="foundicons" />
+        <style type="text/css" id="styles"></style>
+    </head>
 
-	<body>
-		<div id="content">
-			<div id="folder"></div>
-			<div id="dial"></div>
+    <body>
+        <div id="content">
+            <div id="folder"></div>
+            <div id="dial"></div>
 
-			<div id="bookmark_form" class="reveal-modal">
-			     <h1></h1>
-			     <p><span>Title:</span><input type="text" class="title" placeholder="Enter Title" /></p>
-			     <p><span>URL:</span><input type="text" class="url" placeholder="Enter URL" /></p>
-			     <p><span>Custom Icon:</span><input type="text" class="icon" placeholder="Enter URL of Custom Icon/Image" /></p>
-			     <p><span>Use Thumbnail:</span><input type="checkbox" class="thumbnail" title="Check to use the thumbnail service, uncheck to use the site's favicon." /></p>
-			     <button class="close-reveal-modal">Save</button>
-			     <a class="close close-reveal-modal">x</a>
-			</div>
+            <div id="bookmark_form" class="reveal-modal">
+                <h1></h1>
+                <p>
+                    <span>Title:</span
+                    ><input
+                        type="text"
+                        class="title"
+                        placeholder="Enter Title"
+                    />
+                </p>
+                <p>
+                    <span>URL:</span
+                    ><input type="text" class="url" placeholder="Enter URL" />
+                </p>
+                <p>
+                    <span>Custom Icon:</span
+                    ><input
+                        type="text"
+                        class="icon"
+                        placeholder="Enter URL of Custom Icon/Image"
+                    />
+                </p>
+                <p>
+                    <span>Use Thumbnail:</span
+                    ><input
+                        type="checkbox"
+                        class="thumbnail"
+                        title="Check to use the thumbnail service, uncheck to use the site's favicon."
+                    />
+                </p>
+                <button class="close-reveal-modal">Save</button>
+                <a class="close close-reveal-modal">x</a>
+            </div>
 
-			<div id="options"></div>
-		</div>
+            <div id="options"></div>
+        </div>
 
-		<script type="text/javascript" src="javascript/jquery.min.js"></script>
-		<script type="text/javascript" src="javascript/jquery.sortable.js"></script>
-		<script type="text/javascript" src="javascript/jquery.reveal.js"></script>
-		<script type="text/javascript" src="javascript/common.js"></script>
-		<script type="text/javascript" src="javascript/bookmarks.js"></script>
-		<script type="text/javascript" src="javascript/newtab.js"></script>
-		<script type="text/javascript" src="javascript/eventPage.js"></script>
-	</body>
+        <script type="text/javascript" src="javascript/jquery.min.js"></script>
+        <script
+            type="text/javascript"
+            src="javascript/jquery.sortable.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="javascript/jquery.reveal.js"
+        ></script>
+        <script type="text/javascript" src="javascript/common.js"></script>
+        <script type="text/javascript" src="javascript/bookmarks.js"></script>
+        <script type="text/javascript" src="javascript/newtab.js"></script>
+        <script type="text/javascript" src="javascript/eventPage.js"></script>
+    </body>
 </html>
